# Aero-306-Project-1

./: .coverage  .gitignore  CLAUDE.md  TODO.md  bash.exe.stackdump  main.py  pyproject.toml
.claude/: settings.local.json
.claude/rules/: bash_usage.md  docstrings.md  general_style.md
config/: case_02_cantilever_beam.yaml  case_03_simply_supported.yaml  case_08_point_moment.yaml  example_case_01_bar_axial.yaml  example_case_02_cantilever_beam.yaml  example_case_03_simply_supported.yaml  example_case_04_fixed_fixed.yaml  example_case_05_combined_bar_beam.yaml  example_case_06_distributed_load.yaml  example_case_07_multi_material.yaml  example_case_08_point_moment.yaml  example_case_09_inclined_roller.yaml  hw1_prob1_coarse.yaml  hw1_prob1_fine.yaml  hw1_prob2_coarse.yaml  hw1_prob2_fine.yaml  hw1_prob3_coarse.yaml  hw1_prob3_fine.yaml  hw1_prob4_coarse.yaml  hw1_prob4_fine.yaml  problem_1.yaml  problem_1_coarse.yaml  problem_1_fine.yaml  problem_2.yaml  problem_2_coarse.yaml  problem_2_fine.yaml  problem_3.yaml  problem_3_coarse.yaml  problem_3_fine.yaml  problem_4.yaml  problem_4_coarse.yaml  problem_4_fine.yaml  problem_5.yaml  problem_6.yaml  problem_7.yaml
optimization_runs/2026-04-17_heavy_v1/: best_design.yaml  ensemble_result.json  report.md
optimization_runs/2026-04-17_heavy_v2/: best_design.yaml  ensemble_result.json  report.md
scripts/: optimize_geometry.py  plot_comparison.py
src/fea_solver/: __init__.py  assembler.py  buckling.py  constraints.py  elements.py  io_yaml.py  logging_config.py  models.py  plotter.py  reporter.py  (+3 more)
tests/: conftest.py
(+47 files in other folders)
