[project]
name = "fea-solver"
version = "0.1.0"
description = "1D FEA bar/beam solver for AERO 306"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "rich>=13.7",
    "tabulate>=0.9",
    "pydantic>=2.12.5",
    "cma>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.9",
    "ruff>=0.4",
    "hypothesis>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fea_solver"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/fea_solver --cov-report=term-missing"
markers = [
    "slow: long-running tests (excluded from default run)",
]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
    "hypothesis>=6.0",
]
